--- a/package.json
+++ b/package.json
@@ -7,13 +7,18 @@
     "start": "node dist/index.js",
     "build": "tsc",
     "dev": "tsc -w & nodemon dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "commit": "npx git-cz"
   },
   "author": "Luis Fernando Prudencio Cruz",
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.11",
+    "cz-conventional-changelog": "^3.3.0",
+    "husky": "^5.2.0",
+    "lint-staged": "^10.5.4",
     "nodemon": "^2.0.7",
+    "prettier": "^2.2.1",
     "typescript": "^4.2.3"
   },
   "dependencies": {
@@ -25,5 +30,22 @@
       "docs/*"
     ],
     "delay": "2500"
+  },
+  "lint-staged": {
+    "./**/*.{ts,js,json,scss}": [
+      "prettier --write"
+    ],
+    "*.{js,css,md}": "prettier --write"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "pre-push": "npm run build"
+    }
   }
 }
