--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
   "author": "Luis Fernando Prudencio Cruz",
   "license": "ISC",
   "devDependencies": {
+    "@types/compression": "^1.7.0",
+    "@types/connect-timeout": "0.0.34",
+    "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
+    "@types/morgan": "^1.9.2",
     "cz-conventional-changelog": "^3.3.0",
     "husky": "^5.2.0",
     "lint-staged": "^10.5.4",
@@ -27,6 +31,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "mongoose": "^5.12.2",
     "morgan": "^1.10.0"
   },
   "nodemonConfig": {
