--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,19 +16,12 @@
     "moduleResolution": "node",
     "importHelpers": true,
     "target": "es2015",
-    "module": "es2020",
+    "module": "commonjs",
     "strictPropertyInitialization": false,
     "strictBindCallApply": false,
     //"allowSyntheticDefaultImports": true,
     "lib": [
-      "es2018",
-      "dom"
+      "es2015",
     ]
   },
-  "angularCompilerOptions": {
-    "enableI18nLegacyMessageIdFormat": false,
-    "strictInjectionParameters": true,
-    "strictInputAccessModifiers": true,
-    "strictTemplates": true
-  }
 }
