feat: se agrega manejador de respuesta y errores, se integran en servicios de accesos

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,11 @@
     //"allowSyntheticDefaultImports": true,
     "lib": [
       "es2015",
-    ]
+    ],
+    "paths": {
+      "@/*": [
+        "src/*"
+      ]
+    }
   },
 }
