feat: se agrega validador para alta y actualizacion de accesos, ajuste de ruta base

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,7 @@
     "module": "commonjs",
     "strictPropertyInitialization": false,
     "strictBindCallApply": false,
-    //"allowSyntheticDefaultImports": true,
+    "resolveJsonModule": true,
     "lib": [
       "es2015",
     ],
