--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/connect-timeout": "0.0.34",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
+    "@types/express-validator": "^3.0.0",
     "@types/morgan": "^1.9.2",
     "cz-conventional-changelog": "^3.3.0",
     "husky": "^5.2.0",
@@ -31,6 +32,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-validator": "^6.10.0",
     "mongoose": "^5.12.2",
     "morgan": "^1.10.0"
   },
