--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
   "compileOnSave": false,
   "compilerOptions": {
     "baseUrl": "./",
-    "outDir": "./dist",
+    "outDir": "./crm-backend/src",
     "rootDir": "./src",
     "forceConsistentCasingInFileNames": true,
     "strict": true,
