--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/express-formidable": "^1.0.4",
     "@types/express-validator": "^3.0.0",
     "@types/formidable": "^1.2.1",
+    "@types/jsonwebtoken": "^8.5.1",
     "@types/morgan": "^1.9.2",
     "cz-conventional-changelog": "^3.3.0",
     "husky": "^5.2.0",
@@ -37,6 +38,7 @@
     "express-formidable": "^1.2.0",
     "express-validator": "^6.10.0",
     "formidable": "^1.2.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.2",
     "morgan": "^1.10.0"
   },
