--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
     "strictPropertyInitialization": false,
     "strictBindCallApply": false,
     "resolveJsonModule": true,
+    "emitDecoratorMetadata": true,
     "lib": [
       "es2015",
     ],
