--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Luis Fernando Prudencio Cruz",
   "license": "ISC",
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/compression": "^1.7.0",
     "@types/connect-timeout": "0.0.34",
     "@types/cors": "^2.8.10",
@@ -30,6 +31,7 @@
     "typescript": "^4.2.3"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "compression": "^1.7.4",
     "connect-timeout": "^1.9.0",
     "cors": "^2.8.5",
