--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/formidable": "^1.2.1",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/morgan": "^1.9.2",
+    "@types/node": "^16.7.1",
     "cz-conventional-changelog": "^3.3.0",
     "husky": "^5.2.0",
     "lint-staged": "^10.5.4",
@@ -41,10 +42,11 @@
     "express-validator": "^6.10.0",
     "formidable": "^1.2.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.12.2",
     "morgan": "^1.10.0",
+    "mysql2": "^2.3.0",
     "reflect-metadata": "^0.1.13",
-    "typedi": "^0.10.0"
+    "typedi": "^0.10.0",
+    "typeorm": "^0.2.37"
   },
   "nodemonConfig": {
     "ignore": [
