--- a/package.json
+++ b/package.json
@@ -31,10 +31,11 @@
     "typescript": "^4.2.3"
   },
   "dependencies": {
-    "axios": "^0.21.1",
+    "axios": "^0.21.4",
     "compression": "^1.7.4",
     "connect-timeout": "^1.9.0",
     "cors": "^2.8.5",
+    "date-fns": "^2.25.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-formidable": "^1.2.0",
